# ttt

./: Cargo.toml  LICENCE  README.md
res/: french.txt  german  lorem  portuguese  spanish  swedish
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  ui.rs
src/app/: events.rs  mod.rs  state.rs  ui.rs
src/app/modes/: clock.rs  mod.rs  util.rs  words.rs  zen.rs
src/app/ui/: char.rs  mod.rs  theme.rs
src/app/ui/modes/: clock.rs  mod.rs
