[package]
name = "ttt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
rand = "0.9.2"
ratatui = "0.29.0"
rust-embed = { version = "8.9.0", features = ["include-exclude"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
